src/test/ui/mismatched_types/closure-arg-count.stderr
error[E0593]: closure takes 0 arguments but 2 arguments are required
  --> $DIR/closure-arg-count.rs:12:15
   |
12 |     [1, 2, 3].sort_by(|| panic!());
   |               ^^^^^^^ ----------- takes 0 arguments
   |               |
   |               expected closure that takes 2 arguments

error[E0593]: closure takes 1 argument but 2 arguments are required
  --> $DIR/closure-arg-count.rs:13:15
   |
13 |     [1, 2, 3].sort_by(|tuple| panic!());
   |               ^^^^^^^ ---------------- takes 1 argument
   |               |
   |               expected closure that takes 2 arguments

error[E0308]: mismatched types
  --> $DIR/closure-arg-count.rs:14:24
   |
14 |     [1, 2, 3].sort_by(|(tuple, tuple2)| panic!());
   |                        ^^^^^^^^^^^^^^^ expected &{integer}, found tuple
   |
   = note: expected type `&{integer}`
              found type `(_, _)`

error[E0593]: closure takes 1 argument but 2 arguments are required
  --> $DIR/closure-arg-count.rs:14:15
   |
14 |     [1, 2, 3].sort_by(|(tuple, tuple2)| panic!());
   |               ^^^^^^^ -------------------------- takes 1 argument
   |               |
   |               expected closure that takes 2 arguments

error: aborting due to 4 previous errors

